<?xml version="1.0"?>
<package format="2">
  <name>dataspeed_ulc_ros</name>
  <version>0.1.0</version>
  <description>
    Package to translate dataspeed_dbw_msgs to and from CAN messages to interact with Dataspeed ADAS Kit hardware.
  </description>

  <license>BSD</license>
  <author email="mradovnikovich@dataspeedinc.com">Micho Radovnikovich</author>
  <maintainer email="mradovnikovich@dataspeedinc.com">Micho Radovnikovich</maintainer>
  <url type="repository">https://bitbucket.org/dataspeedinc/dataspeed_ulc_ros</url>
  <url type="bugtracker">https://bitbucket.org/dataspeedinc/dataspeed_ulc_ros/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>nodelet</depend>
  <depend>can_msgs</depend>
  <depend>dataspeed_dbw_msgs</depend>

  <export>
    <nodelet plugin="${prefix}/nodelets.xml" />
  </export>
</package>
